--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "myamap",
+  "name": "app",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bmp-js": "0.0.3",
-    "body-parser": "~1.16.0",
+    "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.0",
-    "express": "~4.14.1",
-    "formidable": "^1.1.1",
+    "debug": "~2.6.3",
+    "express": "~4.15.2",
     "jade": "~1.11.0",
-    "mongoose": "^4.10.4",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2",
-    "socket.io": "^1.7.3"
+    "morgan": "~1.8.1",
+    "pg": "^6.2.4",
+    "serve-favicon": "~2.4.2",
+    "shp2json": "^1.2.1"
   }
 }
