--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "pg": "^6.2.4",
-    "serve-favicon": "~2.4.2",
-    "shp2json": "^1.2.1"
+    "serve-favicon": "~2.4.2"
+    
   }
 }
