--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.3",
     "express": "~4.15.2",
     "express-session": "^1.15.3",
+    "formidable": "^1.1.1",
     "jade": "~1.11.0",
     "moment": "^2.18.1",
     "morgan": "~1.8.1",
