--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formidable": "^1.1.1",
     "jade": "~1.11.0",
     "moment": "^2.18.1",
+    "mongodb": "^3.0.7",
     "morgan": "~1.8.1",
     "pg": "^6.2.4",
     "serve-favicon": "~2.4.2"
